--- a/Views/Jobs/_JobEntry.cshtml
+++ b/Views/Jobs/_JobEntry.cshtml
@@ -95,7 +95,7 @@
 
             SubmitJobRow(jobrowid);
             window.alert("Single Job Row Submission Complete!");
-            //RemoveJobRow(this);
+            RemoveJobRow(this);
 
         };
         sub_job_btn.style.background = "mediumblue";
