--- a/Views/Shared/_ResumeStyle.cshtml
+++ b/Views/Shared/_ResumeStyle.cshtml
@@ -58,6 +58,33 @@
     }
 
 
+    /* STYLING FOR JOB EXPERIENCE TABLE */
+    
+    .job_timeline {
+        column-width: 77px;
+        vertical-align: text-top;
+        text-align: center;
+    }
+
+    .job_position {
+        color: #4682B4;
+        font-size: 21px;
+        column-width: 350px;
+        vertical-align: text-top;
+        text-align: center;
+    }
+
+    .job_duties {
+        padding-bottom: 3px;
+        word-wrap: normal;
+        column-width: 500px;
+        vertical-align: middle;
+        text-align: left;
+    }
+
+    
+
+
 </style>
 
 
