--- a/Views/Applicants/ResumeVM.cshtml
+++ b/Views/Applicants/ResumeVM.cshtml
@@ -160,6 +160,10 @@
         <COMPANY>
         <TIMELINE - [FROM DATE, TO DATE]> <POSITION> <DUTIES - [BULLETED LIST]>
 
+        //Questions to ask:
+        //How do we sort Company Name by From Date?
+        //How do we sort Position by From Date?
+
         STRATEGY:
         1) STORE AND SORT APPLICANT RECORDS BY FROM DATE
         2) STORE AND SORT COMPANY NAME HEADERS IN RELATION TO SORTED APPLICANT RECORDS
@@ -182,6 +186,9 @@
         //Get all Company Names and store it
         List<string> CompanyNamesWithDuplicates = new List<string>();
         List<string> PositionsWithDuplicates = new List<string>();
+        List<DateTime> FromDatesWithDuplicates = new List<DateTime>();
+        List<DateTime> ToDatesWithDuplicates = new List<DateTime>();
+
 
         //Stores a list of the Applicant Job
         List<Job> ApplicantJobs = new List<Job>();
@@ -216,6 +223,15 @@
         List<Job> SortedApplicantJobs = ApplicantJobs.OrderByDescending(j => j.FromDate).ToList();
 
 
+        //https://makolyte.com/csharp-select-distinct-objects-based-on-a-property/
+        //List<Job> SortedApplicantJobsDistinct =
+        SortedApplicantJobs.GroupBy(j => j.Position);
+
+
+
+
+
+
         //01: TRAVERSE SORTED (BY FROM DATE) JOB LIST
         //02: GET COMPANY NAMES
         //03: STORE THESE RECORDS IN A LIST
@@ -226,6 +242,8 @@
                 //Store Company Names found for specific Applicant ID
                 CompanyNamesWithDuplicates.Add(job.CompanyName);
                 PositionsWithDuplicates.Add(job.Position);
+                FromDatesWithDuplicates.Add(job.FromDate);
+                ToDatesWithDuplicates.Add(job.ToDate);
             }
         }
 
@@ -252,11 +270,9 @@
         //Create a list of headers using the Company Name list and stripping away Duplicates
         List<string> CompanyNames = CompanyNamesWithDuplicates.Distinct().ToList();
         List<string> Positions = PositionsWithDuplicates.Distinct().ToList();
+        List<DateTime> FromDates = FromDatesWithDuplicates.Distinct().ToList();
+        List<DateTime> ToDates = ToDatesWithDuplicates.Distinct().ToList();
 
-
-        //Questions to ask:
-        //How do we sort Company Name by From Date?
-        //How do we sort Position by From Date?
 
 
 
@@ -268,13 +284,14 @@
 
 
         //Traverse Company Name List
+        /*
         foreach (var company in CompanyNames)
         {
             <h3>@company</h3>
 
 
             //NOW THE CRUCIAL PART OF THE JOB EXPERIENCE OUTPUT:
-            <table id="job_table" cellspacing="10">
+            <table cellspacing="10">
 
                 @foreach (var job in SortedApplicantJobs)
                 {
@@ -288,14 +305,14 @@
                         //Format Date-Time variables from Database to String for cleaner look:
                         //https://stackoverflow.com/questions/38823758/format-datetime-now-to-yyyy-mm-dd
                         string fDateStr, tDateStr;
-                        
+
                         //FROM DATE:
                         fDateStr = job.FromDate.ToString("yyyy-MM");
 
                         //TO DATE:
                         //if Year in Database Record is 9999, identify To Date as Present Job
                         //https://stackoverflow.com/questions/1965087/extract-year-from-datetime-format
-                        int year = job.FromDate.Year;
+                        int year = job.ToDate.Year;
                         if (year == 9999) { tDateStr = "PRESENT"; }
                         else { tDateStr = job.ToDate.ToString("yyyy-MM"); }
 
@@ -333,6 +350,103 @@
 
 
 
+        }//foreach (var company in CompanyNames)
+        */
+
+
+
+
+
+        //METHOD 2
+        //https://stackoverflow.com/questions/2697253/using-linq-to-group-a-list-of-objects-into-a-new-grouped-list-of-list-of-objects
+        //https://docs.microsoft.com/en-us/dotnet/csharp/linq/group-query-results
+        //https://makolyte.com/csharp-select-distinct-objects-based-on-a-property/
+        //https://stackoverflow.com/questions/68088232/c-sharp-linq-group-list-by-a-property-then-select-by-different-groups
+        //https://stackoverflow.com/questions/45206416/linq-groupby-and-select-other-attributes-as-list
+
+
+
+
+
+        //GROUP ON MULTIPLE COLUMNS:
+        //https://stackoverflow.com/questions/5231845/c-sharp-linq-group-by-on-multiple-columns
+        var GroupedApplicantJobs = SortedApplicantJobs.GroupBy(j => new { j.FromDate, j.ToDate, j.CompanyName, j.Position }).ToList();
+
+
+
+        foreach (var company in CompanyNames)
+        {
+
+            <h3>@company</h3>
+
+            foreach (var grouped in GroupedApplicantJobs)
+            {
+                var Key = grouped.Key;
+
+                //Format Date-Time variables from Database to String for cleaner look:
+                //https://stackoverflow.com/questions/38823758/format-datetime-now-to-yyyy-mm-dd
+                string fDateStr, tDateStr;
+
+                //FROM DATE:
+                fDateStr = Key.FromDate.ToString("yyyy-MM");
+
+                //TO DATE:
+                //if Year in Database Record is 9999, identify To Date as Present Job
+                //https://stackoverflow.com/questions/1965087/extract-year-from-datetime-format
+                int year = Key.ToDate.Year;
+                if (year == 9999) { tDateStr = "PRESENT"; }
+                else { tDateStr = Key.ToDate.ToString("yyyy-MM"); }
+
+
+                <table cellspacing="10">
+
+                @if (company == grouped.Key.CompanyName)
+                {
+                        <tr>
+                            <td class="job_timeline">@fDateStr</td>
+                            <td class="job_timeline">@tDateStr</td>
+                            <td class="job_position">@Key.Position</td>
+
+
+
+                            <!--
+                            We now need to tie Job Details to Results.
+                            HOW ARE WE GOING TO DO THAT, USING THE FIELDS AVAILABLE?
+
+                            -->
+                            <td>
+
+
+
+
+
+
+
+
+
+                            </td>
+
+
+
+
+                        </tr>
+
+
+
+                        
+
+
+
+
+                }
+
+                </table>
+
+            }
+
+
+
+        }
 
 
 
@@ -347,8 +461,34 @@
 
 
 
-    }//foreach (var company in CompanyNames)
 
+
+
+        /*
+        foreach (var companyname in CompanyNames)
+        {
+            <h3>@companyname</h3>
+
+            <table cellspacing="10">
+
+                <!--
+
+                    The aim is to have a structure that takes into consideration:
+                    Grouping FromDate, ToDate, and Position together into a single row For Job,
+                    THEN include Job Details
+
+                    C# group similar items in a list
+                    https://makolyte.com/csharp-select-distinct-objects-based-on-a-property/
+
+                -->
+
+
+
+
+            </table>
+
+        }//foreach (var companyname in CompanyNames)
+        */
 
 
 
