--- a/Views/Shared/_ResumeStyle.cshtml
+++ b/Views/Shared/_ResumeStyle.cshtml
@@ -64,6 +64,8 @@
         column-width: 77px;
         vertical-align: text-top;
         text-align: center;
+        color: slategrey;
+        font-weight: 700;
     }
 
     .job_position {
