• Milestone improvements for Experience and Skills section of ResumeVM

--- a/Views/Shared/_ResumeStyle.cshtml
+++ b/Views/Shared/_ResumeStyle.cshtml
@@ -59,19 +59,19 @@
 
 
     /* STYLING FOR JOB EXPERIENCE TABLE */
-    
+
     .job_timeline {
+        color: steelblue;
         column-width: 77px;
         vertical-align: text-top;
-        text-align: center;
-        color: slategrey;
-        font-weight: 700;
+        text-align: left;
+        font-weight: 500;
     }
 
     .job_position {
         color: #4682B4;
         font-size: 21px;
-        column-width: 350px;
+        column-width: 400px;
         vertical-align: text-top;
         text-align: center;
     }
@@ -79,8 +79,8 @@
     .job_duties {
         padding-bottom: 3px;
         word-wrap: normal;
-        column-width: 500px;
-        vertical-align: middle;
+        column-width: 450px;
+        vertical-align: text-top;
         text-align: left;
     }
 
