• Add validation for User Registration page

--- a/Views/Applicants/RegisterUserPageView.cshtml
+++ b/Views/Applicants/RegisterUserPageView.cshtml
@@ -9,7 +9,7 @@
 <!-- Navigation Bar with Partial View -->
 @Html.Partial("_NavBar")
 
-<h2>RegisterUserPageView</h2>
+<h2>User Registration</h2>
 
 <p>Register Using Form Below:</p>
 
@@ -27,3 +27,6 @@
     <input type="submit" class="btn btn-primary" value="Register">
 
 }
+
+
+<!-- COMPLETED -->
