--- a/Views/Shared/_InternalStyle.cshtml
+++ b/Views/Shared/_InternalStyle.cshtml
@@ -58,7 +58,7 @@
 
     .jobexperience {
         border-style: none;
-        background-color: moccasin;
+        background-color: #D5D8DC;
         margin-top: 20px;
         margin-bottom: 20px;
     }
