• Add Edit section for Personal Records

--- a/Views/Applicants/ApplicantDetails.cshtml
+++ b/Views/Applicants/ApplicantDetails.cshtml
@@ -79,6 +79,36 @@
 
 </div>
 
+<br />
+<br />
+
+<div>
+
+    <h3>ADVANCED DATA INPUT</h3>
+
+    <table id="applicantinput_table" cellspacing="50">
+
+        <tbody>
+
+
+            <tr>
+                <td>PERSONALS</td>
+                <td>
+                    @Html.ActionLink("[ADD]", "AddPersonalsPageView", "Personals", new { applicantID = id }, null)
+                </td>
+                <td>
+                    @Html.ActionLink("[EDIT]", "EditPersonalsPageView", "Personals", new { applicantID = id }, null)
+                </td>
+            </tr>
+
+
+        </tbody>
+
+    </table>
+
+
+
+</div>
 
 
 <!--
