--- a/Views/Shared/_InternalStyle.cshtml
+++ b/Views/Shared/_InternalStyle.cshtml
@@ -64,6 +64,12 @@
     }
 
 
+
+    #applicantinput_table {
+        width: 330px;
+        text-align: left;
+        vertical-align: text-top;
+    }
     
     
 
