• Add Skill Editing functionality

--- a/Views/Applicants/ApplicantDetails.cshtml
+++ b/Views/Applicants/ApplicantDetails.cshtml
@@ -102,6 +102,17 @@
             </tr>
 
 
+            <tr>
+                <td>SKILLS</td>
+                <td>
+                    @Html.ActionLink("[ADD]", "AddSkillsPageView", "Skills", new { applicantID = id }, null)
+                </td>
+                <td>
+                    @Html.ActionLink("[EDIT]", "EditSkillsPageView", "Skills", new { applicantID = id }, null)
+                </td>
+            </tr>
+
+
         </tbody>
 
     </table>
