--- a/Views/Skills/AddSkillsPageView.cshtml
+++ b/Views/Skills/AddSkillsPageView.cshtml
@@ -23,7 +23,7 @@
 @{
     ViewBag.Title = "AddSkillsPageView";
 
-    //This value correlates to the ApplicantID between the Applicant and Personal Models
+    //This value correlates to the ApplicantID between the Applicant and Skills Models
     var id = ViewBag.TargetID;
 
 }
