--- a/Views/Skills/_SkillEntry.cshtml
+++ b/Views/Skills/_SkillEntry.cshtml
@@ -2,6 +2,7 @@
 
 
 @{ 
+    //Due to the nature of a Session variable, we have to convert it to an integer
     var id = Convert.ToInt32(Session["id"]);
 }
 
